--- a/wwwroot/invites/failed.html
+++ b/wwwroot/invites/failed.html
@@ -2,44 +2,414 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitation Failed</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        :root {
+            --primary-color: #1E90FF;
+            --secondary-color: #4682B4;
+            --accent-color: #ff4757;
+            --light-color: #f1f9ff;
+            --dark-color: #2c3e50;
+            --card-bg: rgba(255, 255, 255, 0.15);
+            --transition: all 0.3s ease;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #1E90FF, #4682B4);
-            color: white;
-            text-align: center;
-            padding: 100px;
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: var(--light-color);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Background animation elements */
+        .bg-bubbles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+        }
+
+            .bg-bubbles li {
+                position: absolute;
+                list-style: none;
+                display: block;
+                width: 40px;
+                height: 40px;
+                background-color: rgba(255, 255, 255, 0.15);
+                bottom: -160px;
+                border-radius: 50%;
+                animation: square 25s infinite;
+                transition-timing-function: linear;
+            }
+
+                .bg-bubbles li:nth-child(1) {
+                    left: 10%;
+                    animation-delay: 0s;
+                    width: 80px;
+                    height: 80px;
+                }
+
+                .bg-bubbles li:nth-child(2) {
+                    left: 20%;
+                    animation-delay: 2s;
+                    animation-duration: 17s;
+                    width: 60px;
+                    height: 60px;
+                }
+
+                .bg-bubbles li:nth-child(3) {
+                    left: 25%;
+                    animation-delay: 4s;
+                    width: 70px;
+                    height: 70px;
+                }
+
+                .bg-bubbles li:nth-child(4) {
+                    left: 40%;
+                    animation-delay: 0s;
+                    animation-duration: 22s;
+                    width: 90px;
+                    height: 90px;
+                }
+
+                .bg-bubbles li:nth-child(5) {
+                    left: 70%;
+                    width: 50px;
+                    height: 50px;
+                }
+
+                .bg-bubbles li:nth-child(6) {
+                    left: 80%;
+                    animation-delay: 3s;
+                    width: 65px;
+                    height: 65px;
+                }
+
+                .bg-bubbles li:nth-child(7) {
+                    left: 32%;
+                    animation-delay: 7s;
+                    width: 75px;
+                    height: 75px;
+                }
+
+                .bg-bubbles li:nth-child(8) {
+                    left: 55%;
+                    animation-delay: 15s;
+                    animation-duration: 20s;
+                    width: 45px;
+                    height: 45px;
+                }
+
+                .bg-bubbles li:nth-child(9) {
+                    left: 25%;
+                    animation-delay: 2s;
+                    animation-duration: 20s;
+                    width: 35px;
+                    height: 35px;
+                }
+
+                .bg-bubbles li:nth-child(10) {
+                    left: 90%;
+                    animation-delay: 11s;
+                    width: 55px;
+                    height: 55px;
+                }
+
+        @keyframes square {
+            0% {
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+                border-radius: 50%;
+            }
+
+            100% {
+                transform: translateY(-1000px) rotate(720deg);
+                opacity: 0;
+                border-radius: 20%;
+            }
         }
 
         .card {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 40px;
-            display: inline-block;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            background: var(--card-bg);
+            border-radius: 24px;
+            padding: 50px 40px;
+            max-width: 500px;
+            width: 100%;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            text-align: center;
+            transform: translateY(0);
+            transition: var(--transition);
+            animation: cardEntrance 0.8s ease-out forwards;
         }
 
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 20px;
+            .card:hover {
+                transform: translateY(-5px);
+                box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+            }
+
+        @keyframes cardEntrance {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
-        p {
-            font-size: 1.1rem;
+        .icon-wrapper {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.2);
+            margin: 0 auto 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% {
+                box-shadow: 0 0 0 0 rgba(255, 71, 87, 0.4);
+            }
+
+            70% {
+                box-shadow: 0 0 0 15px rgba(255, 71, 87, 0);
+            }
+
+            100% {
+                box-shadow: 0 0 0 0 rgba(255, 71, 87, 0);
+            }
         }
 
         .icon {
-            font-size: 4rem;
+            font-size: 60px;
+            color: var(--accent-color);
+        }
+
+        h1 {
+            font-size: 2.2rem;
             margin-bottom: 20px;
+            font-weight: 600;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        p {
+            font-size: 1.15rem;
+            line-height: 1.6;
+            margin-bottom: 30px;
+            opacity: 0.9;
+        }
+
+        .contact-admin {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
+            text-decoration: none;
+            padding: 12px 25px;
+            border-radius: 50px;
+            transition: var(--transition);
+            margin-top: 15px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+
+            .contact-admin:hover {
+                background: rgba(255, 255, 255, 0.3);
+                transform: translateY(-2px);
+                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            }
+
+        .action-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 25px;
+        }
+
+        .btn {
+            padding: 12px 25px;
+            border-radius: 50px;
+            border: none;
+            font-weight: 600;
+            cursor: pointer;
+            transition: var(--transition);
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .btn-primary {
+            background: var(--light-color);
+            color: var(--primary-color);
+        }
+
+            .btn-primary:hover {
+                background: white;
+                transform: translateY(-2px);
+                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            }
+
+        .btn-secondary {
+            background: transparent;
+            color: var(--light-color);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+        }
+
+            .btn-secondary:hover {
+                background: rgba(255, 255, 255, 0.1);
+                transform: translateY(-2px);
+            }
+
+        .error-details {
+            margin-top: 30px;
+            padding: 15px;
+            background: rgba(0, 0, 0, 0.1);
+            border-radius: 12px;
+            font-size: 0.9rem;
+            text-align: left;
+        }
+
+            .error-details summary {
+                cursor: pointer;
+                padding: 5px 0;
+                font-weight: 500;
+            }
+
+        .error-code {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 5px 15px;
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 4px;
+            font-family: monospace;
+        }
+
+        footer {
+            margin-top: 40px;
+            font-size: 0.9rem;
+            opacity: 0.7;
+        }
+
+        /* Responsive design */
+        @media (max-width: 576px) {
+            .card {
+                padding: 30px 25px;
+            }
+
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .icon-wrapper {
+                width: 100px;
+                height: 100px;
+            }
+
+            .icon {
+                font-size: 50px;
+            }
+
+            .action-buttons {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
 <body>
+    <ul class="bg-bubbles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
     <div class="card">
-        <div class="icon">❌</div>
+        <div class="icon-wrapper">
+            <i class="icon fas fa-exclamation-circle"></i>
+        </div>
+
         <h1>Verification Failed</h1>
-        <p>Sorry, your invitation link is invalid or expired. <br> Please contact the project admin.</p>
+
+        <p>Sorry, your invitation link is invalid or has expired. This could be due to an incorrect URL or the invitation may have been revoked.</p>
+
+        <a href="#" class="contact-admin">
+            <i class="fas fa-envelope"></i>
+            Contact Project Admin
+        </a>
+
+        <div class="action-buttons">
+            <button class="btn btn-primary">
+                <i class="fas fa-home"></i>
+                Return Home
+            </button>
+            <button class="btn btn-secondary">
+                <i class="fas fa-question-circle"></i>
+                Get Help
+            </button>
+        </div>
+
+        <details class="error-details">
+            <summary>Technical Details</summary>
+            <p>Error Code: <span class="error-code">ERR_INVITATION_INVALID</span></p>
+            <p>Timestamp: <span id="timestamp"></span></p>
+        </details>
     </div>
+
+    <footer>
+        <p>&copy; 2023 Company Name. All rights reserved.</p>
+    </footer>
+
+    <script>
+        // Set current timestamp
+        document.getElementById('timestamp').textContent = new Date().toLocaleString();
+
+        // Add subtle animation to icon on hover
+        const icon = document.querySelector('.icon');
+        icon.addEventListener('mouseover', () => {
+            icon.style.transition = 'transform 0.3s ease';
+            icon.style.transform = 'scale(1.1)';
+        });
+
+        icon.addEventListener('mouseout', () => {
+            icon.style.transform = 'scale(1)';
+        });
+    </script>
 </body>
 </html>
