--- a/wwwroot/invites/success.html
+++ b/wwwroot/invites/success.html
@@ -2,44 +2,471 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Invitation Confirmed</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Verified Successfully</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        :root {
+            --primary-color: #1E90FF;
+            --secondary-color: #4682B4;
+            --success-color: #2ecc71;
+            --light-color: #f1f9ff;
+            --dark-color: #2c3e50;
+            --card-bg: rgba(255, 255, 255, 0.15);
+            --transition: all 0.3s ease;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #1E90FF, #4682B4);
-            color: white;
-            text-align: center;
-            padding: 100px;
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
+            color: var(--light-color);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            position: relative;
+            overflow: hidden;
+        }
+
+        /* Background animation elements */
+        .bg-bubbles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+        }
+
+            .bg-bubbles li {
+                position: absolute;
+                list-style: none;
+                display: block;
+                width: 40px;
+                height: 40px;
+                background-color: rgba(255, 255, 255, 0.15);
+                bottom: -160px;
+                border-radius: 50%;
+                animation: square 25s infinite;
+                transition-timing-function: linear;
+            }
+
+                .bg-bubbles li:nth-child(1) {
+                    left: 10%;
+                    animation-delay: 0s;
+                    width: 80px;
+                    height: 80px;
+                }
+
+                .bg-bubbles li:nth-child(2) {
+                    left: 20%;
+                    animation-delay: 2s;
+                    animation-duration: 17s;
+                    width: 60px;
+                    height: 60px;
+                }
+
+                .bg-bubbles li:nth-child(3) {
+                    left: 25%;
+                    animation-delay: 4s;
+                    width: 70px;
+                    height: 70px;
+                }
+
+                .bg-bubbles li:nth-child(4) {
+                    left: 40%;
+                    animation-delay: 0s;
+                    animation-duration: 22s;
+                    width: 90px;
+                    height: 90px;
+                }
+
+                .bg-bubbles li:nth-child(5) {
+                    left: 70%;
+                    width: 50px;
+                    height: 50px;
+                }
+
+                .bg-bubbles li:nth-child(6) {
+                    left: 80%;
+                    animation-delay: 3s;
+                    width: 65px;
+                    height: 65px;
+                }
+
+                .bg-bubbles li:nth-child(7) {
+                    left: 32%;
+                    animation-delay: 7s;
+                    width: 75px;
+                    height: 75px;
+                }
+
+                .bg-bubbles li:nth-child(8) {
+                    left: 55%;
+                    animation-delay: 15s;
+                    animation-duration: 20s;
+                    width: 45px;
+                    height: 45px;
+                }
+
+                .bg-bubbles li:nth-child(9) {
+                    left: 25%;
+                    animation-delay: 2s;
+                    animation-duration: 20s;
+                    width: 35px;
+                    height: 35px;
+                }
+
+                .bg-bubbles li:nth-child(10) {
+                    left: 90%;
+                    animation-delay: 11s;
+                    width: 55px;
+                    height: 55px;
+                }
+
+        @keyframes square {
+            0% {
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+                border-radius: 50%;
+            }
+
+            100% {
+                transform: translateY(-1000px) rotate(720deg);
+                opacity: 0;
+                border-radius: 20%;
+            }
         }
 
         .card {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 20px;
-            padding: 40px;
-            display: inline-block;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            background: var(--card-bg);
+            border-radius: 24px;
+            padding: 50px 40px;
+            max-width: 500px;
+            width: 100%;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            text-align: center;
+            transform: translateY(0);
+            transition: var(--transition);
+            animation: cardEntrance 0.8s ease-out forwards;
         }
 
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 20px;
+            .card:hover {
+                transform: translateY(-5px);
+                box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+            }
+
+        @keyframes cardEntrance {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
-        p {
-            font-size: 1.1rem;
+        .icon-wrapper {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.2);
+            margin: 0 auto 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+        }
+
+            .icon-wrapper::before {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                background: rgba(46, 204, 113, 0.2);
+                animation: pulseSuccess 2s infinite;
+                z-index: -1;
+            }
+
+        @keyframes pulseSuccess {
+            0% {
+                transform: scale(1);
+                opacity: 0.8;
+            }
+
+            70% {
+                transform: scale(1.5);
+                opacity: 0;
+            }
+
+            100% {
+                transform: scale(1.5);
+                opacity: 0;
+            }
         }
 
         .icon {
-            font-size: 4rem;
+            font-size: 60px;
+            color: var(--success-color);
+        }
+
+        .checkmark {
+            position: relative;
+            width: 60px;
+            height: 60px;
+            margin: 0 auto;
+        }
+
+        .checkmark-circle {
+            stroke-dasharray: 166;
+            stroke-dashoffset: 166;
+            stroke-width: 5;
+            stroke-miterlimit: 10;
+            stroke: var(--success-color);
+            fill: none;
+            animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
+        }
+
+        .checkmark-check {
+            transform-origin: 50% 50%;
+            stroke-dasharray: 48;
+            stroke-dashoffset: 48;
+            animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
+        }
+
+        @keyframes stroke {
+            100% {
+                stroke-dashoffset: 0;
+            }
+        }
+
+        h1 {
+            font-size: 2.2rem;
             margin-bottom: 20px;
+            font-weight: 600;
+            text-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        p {
+            font-size: 1.15rem;
+            line-height: 1.6;
+            margin-bottom: 30px;
+            opacity: 0.9;
+        }
+
+        .confetti {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #f0f;
+            opacity: 0.7;
+            animation: confettiFall 5s linear infinite;
+        }
+
+        @keyframes confettiFall {
+            0% {
+                transform: translateY(-100px) rotate(0deg);
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateY(1000px) rotate(720deg);
+                opacity: 0;
+            }
+        }
+
+        .action-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 25px;
+        }
+
+        .btn {
+            padding: 12px 25px;
+            border-radius: 50px;
+            border: none;
+            font-weight: 600;
+            cursor: pointer;
+            transition: var(--transition);
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .btn-primary {
+            background: var(--light-color);
+            color: var(--primary-color);
+        }
+
+            .btn-primary:hover {
+                background: white;
+                transform: translateY(-2px);
+                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            }
+
+        .btn-secondary {
+            background: transparent;
+            color: var(--light-color);
+            border: 1px solid rgba(255, 255, 255, 0.5);
+        }
+
+            .btn-secondary:hover {
+                background: rgba(255, 255, 255, 0.1);
+                transform: translateY(-2px);
+            }
+
+        .progress-bar {
+            height: 5px;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 10px;
+            overflow: hidden;
+            margin-top: 30px;
+        }
+
+        .progress-fill {
+            height: 100%;
+            width: 0%;
+            background: var(--success-color);
+            border-radius: 10px;
+            animation: fillProgress 2s ease-in-out forwards;
+        }
+
+        @keyframes fillProgress {
+            to {
+                width: 100%;
+            }
+        }
+
+        footer {
+            margin-top: 40px;
+            font-size: 0.9rem;
+            opacity: 0.7;
+        }
+
+        /* Responsive design */
+        @media (max-width: 576px) {
+            .card {
+                padding: 30px 25px;
+            }
+
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            .icon-wrapper {
+                width: 100px;
+                height: 100px;
+            }
+
+            .icon {
+                font-size: 50px;
+            }
+
+            .action-buttons {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
 <body>
+    <ul class="bg-bubbles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
     <div class="card">
-        <div class="icon">✅</div>
+        <div class="icon-wrapper">
+            <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                <circle class="checkmark-circle" cx="26" cy="26" r="25" fill="none" />
+                <path class="checkmark-check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
+            </svg>
+        </div>
+
         <h1>Email Verified</h1>
-        <p>Your invitation has been successfully confirmed. <br> Welcome aboard! 🎉</p>
+
+        <p>Your invitation has been successfully confirmed. Welcome aboard! 🎉</p>
+
+        <div class="progress-bar">
+            <div class="progress-fill"></div>
+        </div>
+
+        <div class="action-buttons">
+            <button class="btn btn-primary">
+                <i class="fas fa-rocket"></i>
+                Get Started
+            </button>
+            <button class="btn btn-secondary">
+                <i class="fas fa-info-circle"></i>
+                Learn More
+            </button>
+        </div>
     </div>
+
+    <footer>
+        <p>&copy; 2023 Company Name. All rights reserved.</p>
+    </footer>
+
+    <script>
+        // Create confetti elements
+        function createConfetti() {
+            const colors = ['#2ecc71', '#1E90FF', '#ff4757', '#ffa502', '#dfe4ea'];
+            const container = document.body;
+
+            for (let i = 0; i < 50; i++) {
+                const confetti = document.createElement('div');
+                confetti.className = 'confetti';
+                confetti.style.left = Math.random() * 100 + 'vw';
+                confetti.style.width = Math.random() * 10 + 5 + 'px';
+                confetti.style.height = Math.random() * 10 + 5 + 'px';
+                confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+                confetti.style.animationDelay = Math.random() * 5 + 's';
+                confetti.style.animationDuration = Math.random() * 3 + 3 + 's';
+                container.appendChild(confetti);
+            }
+        }
+
+        // Initialize confetti
+        createConfetti();
+
+        // Add subtle animation to checkmark on hover
+        const checkmark = document.querySelector('.checkmark');
+        checkmark.addEventListener('mouseover', () => {
+            checkmark.style.transition = 'transform 0.3s ease';
+            checkmark.style.transform = 'scale(1.1)';
+        });
+
+        checkmark.addEventListener('mouseout', () => {
+            checkmark.style.transform = 'scale(1)';
+        });
+    </script>
 </body>
 </html>
