--- a/wwwroot/invites/failed.html
+++ b/wwwroot/invites/failed.html
@@ -393,7 +393,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Company Name. All rights reserved.</p>
+        <p>&copy; 2025 SynchroSecurity. All rights reserved.</p>
     </footer>
 
     <script>
